git練習問題Q2 画面トップまでスクロールするボタンを表示

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       </li>
     </ul>
   </nav>
+
   <main class="container-fluid content-width result">
     <div class="card-deck row">
       <a href="#" class="card">
@@ -230,6 +231,9 @@
         </div>
       </div>
     </div>
+  </div>
+  <div id="page-top">
+    <a href="#"></a>
   </div>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
